[metadata]
name = network-insight-sdk-python
url = https://github.com
author = vRNI
author-email = opensource@internap.com
summary = Python SDK for vRNI
description-file = README.md
license = Apache Software License
home-page = https://github.com

[nosetests]
tests = tests
no-path-adjustment = 1
logging-level=DEBUG
verbosity = 2

[wheel]
universal = 1
